[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/models/characters/security/security_model.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/entities/NPC/base/state_machine/states/IdleState.gd" type="Script" id=2]
[ext_resource path="res://assets/entities/NPC/base/pathfinding.gd" type="Script" id=3]
[ext_resource path="res://assets/entities/NPC/base/state_machine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://assets/models/basic/cone_collision.tres" type="Shape" id=5]
[ext_resource path="res://assets/entities/NPC/base/state_machine/states/CoverState.gd" type="Script" id=6]
[ext_resource path="res://assets/entities/weapons/WeaponProperties.gd" type="Script" id=7]
[ext_resource path="res://assets/entities/NPC/base/attacks/ShootTarget.gd" type="Script" id=8]
[ext_resource path="res://assets/entities/weapons/PlayGunshot.gd" type="Script" id=9]
[ext_resource path="res://assets/sound/gunshots/FIREARM_Handgun_H_P30L_9mm_Fire_RR1_stereo.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/entities/NPC/base/LookForEnemy.gd" type="Script" id=11]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.5

[node name="Base_NPC" type="KinematicBody"]
collision_layer = 5

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="model" parent="." instance=ExtResource( 1 )]
transform = Transform( -1.3, 0, -1.1365e-07, 0, 1.3, 0, 1.1365e-07, 0, -1.3, 0, -0.3, 0 )

[node name="Aim_and_Shoot" type="Spatial" parent="."]

[node name="set_npc_gun_model" type="Spatial" parent="Aim_and_Shoot"]

[node name="weapon_properties" type="Spatial" parent="Aim_and_Shoot"]
script = ExtResource( 7 )
bullet_velocity = 380.0
bullet_directory = "res://assets/entities/weapons/bullet/bullet.tscn"

[node name="look_for_enemy" type="Spatial" parent="Aim_and_Shoot"]
script = ExtResource( 11 )

[node name="fov_detection" type="Area" parent="Aim_and_Shoot/look_for_enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, -0.55 )
collision_layer = 6
collision_mask = 6

[node name="fov_shape" type="CollisionShape" parent="Aim_and_Shoot/look_for_enemy/fov_detection"]
transform = Transform( 20, 0, 0, 0, -8.74228e-07, -20, 0, 20, -8.74228e-07, 0, 0, -20 )
shape = ExtResource( 5 )

[node name="cast_detection" type="RayCast" parent="Aim_and_Shoot/look_for_enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, -0.55 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
collision_mask = 7

[node name="shoot_at_enemy" type="Spatial" parent="Aim_and_Shoot"]
script = ExtResource( 8 )

[node name="shot_interval" type="Timer" parent="Aim_and_Shoot/shoot_at_enemy"]
wait_time = 2.0

[node name="lost_visual" type="Timer" parent="Aim_and_Shoot/shoot_at_enemy"]
wait_time = 3.0
one_shot = true

[node name="gunshot" type="AudioStreamPlayer3D" parent="Aim_and_Shoot/shoot_at_enemy"]
stream = ExtResource( 10 )
attenuation_model = 1
unit_db = 50.0
unit_size = 2.0
max_distance = 500.0
script = ExtResource( 9 )

[node name="AI_behaviour" type="Spatial" parent="."]

[node name="state_machine" type="Node" parent="AI_behaviour"]
script = ExtResource( 4 )
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="AI_behaviour/state_machine"]
script = ExtResource( 2 )
debug_cover = true

[node name="cover" type="Node" parent="AI_behaviour/state_machine"]
script = ExtResource( 6 )

[node name="pathfinding" type="Spatial" parent="AI_behaviour"]
script = ExtResource( 3 )
target = Vector3( 0, 0.1, 0 )
speed = 4.0

[node name="path_regen" type="Timer" parent="AI_behaviour"]
wait_time = 0.5
autostart = true

[node name="chest_position" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )

[node name="head_position" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, -0.65 )

[node name="shoot_position" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.8 )

[connection signal="enemy_detected" from="Aim_and_Shoot/look_for_enemy" to="Aim_and_Shoot/shoot_at_enemy" method="_on_look_for_enemy_enemy_detected"]
[connection signal="enemy_lost" from="Aim_and_Shoot/look_for_enemy" to="Aim_and_Shoot/shoot_at_enemy" method="_on_look_for_enemy_enemy_lost"]
[connection signal="body_entered" from="Aim_and_Shoot/look_for_enemy/fov_detection" to="Aim_and_Shoot/look_for_enemy" method="_on_fov_detection_body_entered"]
[connection signal="body_exited" from="Aim_and_Shoot/look_for_enemy/fov_detection" to="Aim_and_Shoot/look_for_enemy" method="_on_fov_detection_body_exited"]
[connection signal="timeout" from="Aim_and_Shoot/shoot_at_enemy/shot_interval" to="Aim_and_Shoot/shoot_at_enemy" method="_on_shot_interval_timeout"]
[connection signal="timeout" from="Aim_and_Shoot/shoot_at_enemy/shot_interval" to="Aim_and_Shoot/shoot_at_enemy/gunshot" method="_on_shot_interval_timeout"]
[connection signal="timeout" from="Aim_and_Shoot/shoot_at_enemy/lost_visual" to="Aim_and_Shoot/shoot_at_enemy" method="_on_lost_visual_timeout"]
[connection signal="timeout" from="AI_behaviour/path_regen" to="AI_behaviour/pathfinding" method="_on_path_regen_timeout"]
